# workflow_sdk

./: .gitignore  Dockerfile  Makefile  README.md  README_PYPI.md  docker-compose.yml  pyproject.toml  requirements.txt  setup_adk_environment.sh
.github/workflows/: publish.yml  test.yml
docs/kubiya/: .gitignore  README.md  changelog.mdx  cli-reference.mdx  docs.json  existing.txt  index.mdx  mint.json  package-lock.json  package.json  quick-start.mdx  style.css  updates.mdx  vercel.json
docs/kubiya/api/: index.js
docs/kubiya/api-reference/: compose.mdx
docs/kubiya/concepts/: agent-frameworks-comparison.mdx  deterministic-workflows.mdx  integrations.mdx  platform-overview.mdx  runners.mdx  why-kubiya.mdx  workflows.mdx
docs/kubiya/full-stack-agents/: agent-servers.mdx  overview.mdx  quickstart.mdx
docs/kubiya/getting-started/: installation.mdx  quickstart.mdx  welcome.mdx
docs/kubiya/mcp/: agent-server.mdx  authentication.mdx  examples.mdx  overview.mdx  quickstart.mdx  tools-reference.mdx
docs/kubiya/mcp/full-stack-agents/: examples.mdx
docs/kubiya/providers/: fastmcp.mdx  overview.mdx
docs/kubiya/providers/adk/: streaming.mdx
docs/kubiya/sdk/: api-reference.mdx  contributing.mdx  examples.mdx  overview.mdx
docs/kubiya/sentry/: sentry-integration.mdx
docs/kubiya/workflows/: advanced.mdx  architecture.mdx  examples.mdx  overview.mdx
examples/examples/incident-response-wf/: ARCHITECTURE.md  CLAUDE_CODE_INTEGRATION.md  DATADOG_TEST_ANALYSIS.md  FINAL_SETUP.md  PROJECT_COMPLETION_SUMMARY.md  README.md  check_slack_status.py  debug_slack_channel.py  debug_slack_simple.py  demo_datadog_incident.py  deploy_production.py  generate_diagrams.py  generate_workflow.py  test_channel_privacy.py  test_complete_workflow.py  test_datadog_incident.py  test_datadog_simple.py  test_e2e_claude_code.py  test_minimal_claude.py  test_persistent_channel.py  test_simple_claude_investigation.py  test_workflow_simple.py
examples/examples/incident-response-wf/archived_files/: compiled_fixed_incident.json  compiled_production_incident.yaml  compiled_proper_incident.yaml  compiled_simple_incident.json  compiled_simple_incident.yaml  compiled_tool_incident.json  compiled_working_incident.json  comprehensive_incident_workflow.py  create_demo_secret.py  debug_slack_integration.py  debug_workflow_test.py  enhanced_incident_workflow.py  fixed_incident_workflow.py  fixed_tool_workflow.py  incident_response_workflow.py  incident_response_workflow_dsl.py  minimal_test.py  production_incident_workflow.py  proper_incident_workflow.py  proper_oo_incident_workflow.py  real_claude_workflow.py  run_comprehensive_test.py  run_debug_slack_test.py  run_test.py  setup_environment.py  simple_incident_workflow.py  test_claude_integration.py  test_detailed_claude.py  test_execution.py  test_fixed_workflow.py  test_minimal.py  test_oo_workflow.py  test_production_workflow.py  test_professional_workflow.py  test_real_execution.py  test_real_slack_workflow.py  test_simple_workflow.py  test_slack_endpoints.py  test_super_simple.py  test_working_workflow.py  (+1 more)
examples/examples/incident-response-wf/configs/: claude_code_config.json
examples/examples/incident-response-wf/containers/: Dockerfile.incident-response
examples/examples/incident-response-wf/docs/: architecture_diagram.md  container_execution.md  data_flow_diagram.md  workflow_diagram.md
examples/examples/incident-response-wf/examples/: demo_workflow.py
examples/examples/incident-response-wf/tests/: test_incident_workflow.py
examples/examples/incident-response-wf/tools/: claude_code_step.py  setup_environment.sh
examples/examples/incident-response-wf/workflows/: README.md  cli.py  incident_response_workflow.json  real_slack_incident_workflow.py  real_slack_incident_workflow.py.backup  requirements.txt
examples/notebooks/: 00_test_setup.ipynb  01_getting_started.ipynb  02_ai_workflow_generation.ipynb  03_agent_server_example.ipynb  04_workflow_server.ipynb  06_sdk_end_to_end.ipynb  07_multi_provider_agent.ipynb  README.md  requirements.txt
kubiya_workflow_sdk/: __init__.py  __version__.py  cli.py  client.py  examples.py  execution.py
kubiya_workflow_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
kubiya_workflow_sdk/core/: __init__.py  constants.py  exceptions.py  types.py
kubiya_workflow_sdk/dsl/: step.py  workflow.py
kubiya_workflow_sdk/dsl_experimental/: __init__.py  control_flow.py  data.py  example.py  examples.py  executors.py  lifecycle.py  models.py  models_new.py  queue.py  scheduling.py  step.py  with_files.json  with_files.py  workflow.py
kubiya_workflow_sdk/mcp/: __init__.py  example_server.py  server.py  workflow_server.py
kubiya_workflow_sdk/mcp/server/: README.md  resources.py  tools.py
kubiya_workflow_sdk/providers/: README.md  __init__.py  base.py
kubiya_workflow_sdk/providers/adk/: README.md  __init__.py  agents.py  config.py  example.py  llm_wrapper.py  provider.py  streaming.py  tools.py
kubiya_workflow_sdk/providers/adk/agents/: __init__.py  base.py  compiler.py  executor.py  (+5 more)
kubiya_workflow_sdk/providers/fastmcp/: __init__.py  config.py  provider.py
kubiya_workflow_sdk/server/: __init__.py  __main__.py  app.py  auth.py  cli.py  execution_manager.py  models.py  orchestration_server.py  sse_handler.py
kubiya_workflow_sdk/tools/: executor.py
scripts/: release.py
tests/mcp/: __init__.py  conftest.py  dummy_server.py  fixtures.py  helpers.py  mock_infrastructure_enhanced.py  mocks.py  proper_mcp_client.py  simple_mcp_client.py  test_auth_error_scenarios.py  test_business_logic.py  test_comprehensive_scenarios.py  test_data.py  test_data_enhanced.py  test_data_validation.py  test_dummy_server.py  test_end_to_end_validation.py  test_error_handling_comprehensive.py  test_integration_contracts.py  test_integration_infrastructure.py  test_mcp_infrastructure.py  test_mcp_sdk_bridge_integration.py  test_output_schemas.py  test_real_mcp_client.py  test_request_translation.py  test_sdk_method_contracts.py  test_server_connectivity.py  test_syntax_validation.py  test_tool_functions.py
(+32 files in other folders)
