[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubiya-workflow-sdk"
version = "3.0.0"
description = "Production-grade SDK for building and executing workflows on the Kubiya platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kubiya", email = "sdk@kubiya.ai"},
]
maintainers = [
    {name = "Kubiya SDK Team", email = "sdk@kubiya.ai"},
]
keywords = ["workflow", "automation", "orchestration", "kubiya", "devops"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.2",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "httpx>=0.24.0",
    "sseclient-py>=1.7.2",
    "click>=8.0.0",
    "rich>=12.0.0",
    "typer>=0.9.0",
    "networkx>=2.8",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "sse-starlette>=1.6.1",
    "websockets>=11.0",
]
mcp = [
    "mcp>=0.1.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
all = [
    "kubiya-workflow-sdk[server,mcp,test]",
]

[project.scripts]
kubiya = "kubiya_workflow_sdk.cli:cli"
kubiya-server = "kubiya_workflow_sdk.server.__main__:main"
kubiya-mcp = "kubiya_workflow_sdk.mcp.server:main"

[project.urls]
Homepage = "https://kubiya.ai"
Documentation = "https://docs.kubiya.ai/workflow-sdk"
Repository = "https://github.com/kubiya/workflow-sdk"
Issues = "https://github.com/kubiya/workflow-sdk/issues"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["kubiya_workflow_sdk*"]
exclude = ["tests*", "test_e2e*", "examples*", "docs*", "venv*", "*__pycache__*"]

[tool.setuptools.package-data]
kubiya_workflow_sdk = [
    "py.typed",
    "templates/*.yaml",
    "templates/*.json",
]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
namespace_packages = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = ["."] 